--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,6 +1,6 @@
 @import url("../public/fonts/hafs/stylesheet.css");
 @import url("../public/fonts/taha/stylesheet.css");
-@import url("https://fonts.googleapis.com/css2?family=Ubuntu");
+@import url("https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;400;500;700&display=swap");
 
 @tailwind base;
 @tailwind components;
